--- a/.github/workflows/build_kernel.yml
+++ b/.github/workflows/build_kernel.yml
@@ -17,122 +17,55 @@ jobs:
           sudo apt-get install -y gcc-aarch64-linux-gnu gcc build-essential \
           libssl-dev make bc bison flex libelf-dev zip
 
-      - name: Setup Kconfig Files
+      - name: Analyze Repository Structure
         run: |
-          # Debug: Show current structure
-          echo "Current directory structure:"
-          ls -la kernel/sched_assist/
-          ls -la kernel/locking/klockopt/
+          echo "Repository Structure Analysis:"
+          echo "=============================="
           
-          # Replace Kconfig files directly
-          sudo tee kernel/sched_assist/Kconfig > /dev/null << 'EOL'
-          config OPLUS_FEATURE_SCHED_ASSIST
-            tristate "sched_assist"
-            default n
-            help
-              turning sched for ui, render and so on to improve UX
-
-          config OPLUS_FEATURE_SCHED_SPREAD
-            bool "sched_spread"
-            default n
-            help
-              This is the uifirst 5.0 feature, which will spread tasks,
-              kick runnable time from task demand and adjust bg's time slice.
-
-          config OPLUS_FEATURE_AUDIO_OPT
-            bool "config audio opt"
-            default n
-            help
-              audio task schedule opt
-
-          config MMAP_LOCK_OPT
-            bool "config mmap lock opt"
-            default n
-            depends on OPLUS_FEATURE_SCHED_ASSIST
-            help
-              reduce sleep time in mmap lock
-
-          config OPLUS_ALLBOOST_OPT
-            bool "config allboost opt"
-            default n
-            help
-              Make the SCHED_ALL_BOOST function take effect
-
-          config OPLUS_FG_BOOST
-            bool "config oplus fg boost"
-            default n
-            help
-              Make the SCHED_FG_BOOST function take effect
-          EOL
+          echo "1. Root directory contents:"
+          ls -la
           
-          sudo tee kernel/locking/klockopt/Kconfig > /dev/null << 'EOL'
-          config KERNEL_LOCK_OPT
-            tristate "config kernel lock opt"
-            default n
-            help
-              uxmutex inplement & record rwsem owners
-          EOL
+          echo -e "\n2. Kernel directory contents:"
+          ls -la kernel/ || echo "No kernel directory"
           
-          # Set permissions
-          sudo chown -R $USER:$USER kernel/
+          echo -e "\n3. Looking for symlinks:"
+          find . -type l -exec ls -l {} \;
           
-          # Debug: Show file contents
-          echo -e "\nVerifying Kconfig contents:"
-          cat kernel/sched_assist/Kconfig
-          echo -e "\nkernel/locking/klockopt/Kconfig contents:"
-          cat kernel/locking/klockopt/Kconfig
+          echo -e "\n4. Looking for Kconfig files:"
+          find . -name "Kconfig"
+          
+          echo -e "\n5. Directory tree of important paths:"
+          tree kernel/ 2>/dev/null || echo "No kernel directory"
+          tree drivers/android/ 2>/dev/null || echo "No android drivers"
+          
+          echo -e "\n6. Available defconfigs:"
+          ls -la arch/arm64/configs/
 
-      - name: Configure Build
+      - name: Create Required Directories
         run: |
-          export ARCH=arm64
-          export SUBARCH=arm64
-          export CROSS_COMPILE=aarch64-linux-gnu-
+          # First check if directories exist
+          echo "Current structure before creating directories:"
+          pwd
+          ls -la
           
-          # Use MTK debug config
-          echo "Using k6891v1_64_k419_debug_defconfig"
-          make O=out ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE k6891v1_64_k419_debug_defconfig
+          echo -e "\nAttempting to create directories:"
+          # Try creating in vendor first
+          mkdir -p vendor/oplus/kernel/oplus_performance/sched_assist || echo "Could not create in vendor"
+          mkdir -p vendor/oplus/kernel/oplus_performance/locking/klockopt || echo "Could not create in klockopt"
           
-          # Show config
-          echo -e "\nConfiguration summary:"
-          head -n 50 out/.config
+          # Try creating in drivers as alternative
+          mkdir -p drivers/oplus/kernel/oplus_performance/sched_assist || echo "Could not create in drivers"
+          mkdir -p drivers/oplus/kernel/oplus_performance/locking/klockopt || echo "Could not create in drivers/klockopt"
+          
+          echo -e "\nFinal directory structure:"
+          find . -name "sched_assist" -o -name "klockopt"
 
-      - name: Build Kernel
-        run: |
-          export ARCH=arm64
-          export SUBARCH=arm64
-          export CROSS_COMPILE=aarch64-linux-gnu-
-          
-          # Build with detailed output
-          make O=out ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE -j$(nproc) V=1 2>&1 | tee build.log
-          
-          BUILD_STATUS=${PIPESTATUS[0]}
-          if [ $BUILD_STATUS -eq 0 ]; then
-            echo "Build completed successfully!"
-          else
-            echo "Build failed with status $BUILD_STATUS"
-            echo "Last 50 lines of build log:"
-            tail -n 50 build.log
-            echo -e "\nKconfig related errors:"
-            grep -i "kconfig" build.log || true
-            exit $BUILD_STATUS
-          fi
-
-      - name: Package Build Results
-        if: always()
-        run: |
-          mkdir -p artifacts
-          cp -v out/.config artifacts/ 2>/dev/null || true
-          cp -v out/arch/arm64/boot/Image* artifacts/ 2>/dev/null || true
-          cp -v build.log artifacts/ 2>/dev/null || true
-          
-          # Copy Kconfig files for reference
-          cp -v kernel/sched_assist/Kconfig artifacts/sched_assist_kconfig.txt || true
-          cp -v kernel/locking/klockopt/Kconfig artifacts/klockopt_kconfig.txt || true
-
-      - name: Upload Build Results
+      - name: Upload Analysis Results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: kernel-build-outputs
-          path: artifacts/
+          name: repository-analysis
+          path: |
+            repository-structure.txt
+            find-results.txt
           if-no-files-found: warn
