--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -1,222 +1,148 @@
-name: Kernel Build and Test
+name: Package Kernel for Flashing
 on:
   workflow_dispatch:
 
 jobs:
-  build:
+  package:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          
-      - name: Setup Build Environment
+      - name: Set Build Info
         run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu gcc build-essential \
-          libssl-dev make bc bison flex libelf-dev zip \
-          libncurses-dev gzip python-is-python3
+          echo "=== Build Information ==="
+          echo "Date: 2025-03-23"
+          echo "Time: 18:39:41"
+          echo "User: dharani-dp-33"
+          echo "Device: X7Max/GTNeo/GTNeo2T"
 
-      - name: Final Setup Attempt
-        run: |
-          # Function to safely create directory
-          safe_mkdir() {
-            if [ ! -d "$1" ]; then
-              mkdir -p "$1" || echo "WARNING: Could not create $1"
-            else
-              echo "Directory $1 exists, skipping..."
-            fi
-          }
-
-          # Function to safely write file
-          safe_write() {
-            local dir=$(dirname "$1")
-            safe_mkdir "$dir"
-            if [ ! -f "$1" ] || [ -w "$1" ]; then
-              cat > "$1" || echo "WARNING: Could not write to $1"
-            else
-              echo "WARNING: Cannot write to $1"
-            fi
-          }
-
-          echo "=== Starting Setup with Current Time ==="
-          echo "Current time: 2025-03-23 18:32:33"
-          echo "Current user: dharani-dp-33"
-
-          # 1. Safely create all directories
-          for dir in \
-            vendor/oplus/kernel/include \
-            vendor/oplus/kernel/secureguard/rootguard \
-            kernel/sched_assist \
-            kernel/orms \
-            kernel/oplus_cpu \
-            kernel/healthinfo \
-            kernel/dfr \
-            kernel/mm_osvelte \
-            kernel/performance \
-            drivers/soc/oplus \
-            drivers/input/oplus \
-            drivers/misc/oplus \
-            drivers/power/oplus \
-            drivers/staging/android/oplus \
-            drivers/oplus \
-            include/config; do
-            safe_mkdir "$dir"
-          done
-
-          # 2. Create version header with EXACT time
-          safe_write "vendor/oplus/kernel/include/oplus_version.h" << EOF
-          #ifndef _OPLUS_VERSION_H_
-          #define _OPLUS_VERSION_H_
-          #define OPLUS_BUILD_DATE "2025-03-23"
-          #define OPLUS_BUILD_TIME "18:32:33"
-          #define OPLUS_BUILD_USER "dharani-dp-33"
-          #endif
-          EOF
-
-          # 3. Create Kconfig files with error checking
-          for dir in kernel/*/; do
-            if [ -d "$dir" ]; then
-              feature=$(basename "$dir" | tr '[:lower:]' '[:upper:]' | tr '-' '_')
-              safe_write "${dir}Kconfig" << EOF
-          config OPLUS_FEATURE_${feature}
-              tristate "OPLUS ${feature} support"
-              default y
-              help
-                  OPLUS ${feature} kernel feature
-          EOF
-              safe_write "${dir}Makefile" << EOF
-          obj-\$(CONFIG_OPLUS_FEATURE_${feature}) += ${feature,,}.o
-          EOF
-            fi
-          done
-
-          # 4. Special handling for sched_assist
-          safe_write "kernel/sched_assist/Kconfig" << 'EOF'
-          config OPLUS_FEATURE_SCHED_ASSIST
-              def_bool y
-              help
-                  OPLUS SchedAssist feature
-          EOF
-
-          # 5. Create core OPLUS config
-          safe_write "drivers/oplus/Kconfig" << 'EOF'
-          menu "OPLUS Feature Drivers"
-          config OPLUS_SYSTEM_KERNEL
-              bool "OPLUS system kernel"
-              default y
-              help
-                  OPLUS system kernel feature
-
-          source "kernel/sched_assist/Kconfig"
-          source "kernel/orms/Kconfig"
-          source "kernel/oplus_cpu/Kconfig"
-          source "kernel/healthinfo/Kconfig"
-          source "kernel/dfr/Kconfig"
-          source "kernel/mm_osvelte/Kconfig"
-          source "kernel/performance/Kconfig"
-          endmenu
-          EOF
-
-          # 6. Create vendor Makefiles
-          safe_write "vendor/oplus/Makefile" << 'EOF'
-          obj-y += kernel/
-          EOF
-
-          safe_write "vendor/oplus/kernel/Makefile" << 'EOF'
-          obj-y += secureguard/
-          EOF
-
-          # 7. Create base config
-          touch include/config/auto.conf
-
-      - name: Build Kernel
-        run: |
-          export ARCH=arm64
-          export SUBARCH=arm64
-          export CROSS_COMPILE=aarch64-linux-gnu-
-          export KBUILD_BUILD_USER="dharani-dp-33"
-          export KBUILD_BUILD_HOST="github-actions"
-          
-          rm -rf out/
-          mkdir -p out/
-          
-          echo "=== Starting Kernel Build ==="
-          make O=out ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE k6891v1_64_k419_debug_defconfig || echo "Config failed but continuing..."
-          make O=out ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE -j$(nproc) 2>&1 | tee build.log
-
-      - name: Run Tests
-        run: |
-          echo "=== Running Kernel Tests ==="
-          echo "Build Date: 2025-03-23"
-          echo "Build Time: 18:32:33"
-          echo "Build User: dharani-dp-33"
-          
-          # Check kernel image
-          if [ -f "out/arch/arm64/boot/Image.gz-dtb" ]; then
-            echo "✓ Kernel image built successfully"
-            ls -lh out/arch/arm64/boot/Image.gz-dtb
-          else
-            echo "✗ Kernel image not found"
-          fi
-          
-          # Check config
-          if [ -f "out/.config" ]; then
-            echo "✓ Kernel config exists"
-            echo "Checking security settings..."
-            grep -i "CONFIG_SECURITY" out/.config || echo "No security configs found"
-          else
-            echo "✗ Kernel config not found"
-          fi
-          
-          # Generate test report
-          cat << EOF > test-report.txt
-          Kernel Build & Test Report
-          =========================
-          Date: 2025-03-23
-          Time: 18:32:33
-          User: dharani-dp-33
-          
-          1. Build Status
-          --------------
-          $(if [ -f "out/arch/arm64/boot/Image.gz-dtb" ]; then echo "SUCCESS"; else echo "FAILED"; fi)
-          
-          2. Image Details
-          --------------
-          $(ls -lh out/arch/arm64/boot/Image.gz-dtb 2>/dev/null || echo "Image not found")
-          
-          3. Configuration
-          --------------
-          $(grep -i "CONFIG_OPLUS" out/.config 2>/dev/null || echo "No OPLUS configs found")
-          EOF
-
-      - name: Package Kernel
-        if: success()
-        run: |
-          git clone https://github.com/osm0sis/AnyKernel3
-          cd AnyKernel3
-          sed -i 's/do.devicecheck=1/do.devicecheck=1/g' anykernel.sh
-          sed -i 's/device.name1=/device.name1=RMX3031/g' anykernel.sh
-          sed -i 's/device.name2=/device.name2=RMX3033/g' anykernel.sh
-          sed -i 's/device.name3=/device.name3=GTNeo/g' anykernel.sh
-          sed -i 's/device.name4=/device.name4=GTNeo2T/g' anykernel.sh
-          sed -i 's/device.name5=/device.name5=X7Max/g' anykernel.sh
-          
-          if [ -f "../out/arch/arm64/boot/Image.gz-dtb" ]; then
-            cp ../out/arch/arm64/boot/Image.gz-dtb .
-            zip -r9 ../X7Max-Kernel.zip * -x .git README.md *placeholder
-          fi
-          cd ..
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
+      - name: Download Previous Build
+        uses: actions/download-artifact@v4
         with:
           name: kernel-build-and-test
+          path: kernel-files
+
+      - name: Setup Environment
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y zip unzip curl wget android-tools-adb
+
+      - name: Create Flash Package
+        run: |
+          mkdir -p flash_package
+          cd flash_package
+          
+          # Create flash instructions
+          cat << 'EOF' > FLASH_INSTRUCTIONS.txt
+          X7Max/GTNeo/GTNeo2T Kernel Flashing Instructions
+          ==============================================
+          Build Date: 2025-03-23
+          Build Time: 18:39:41
+          Builder: dharani-dp-33
+
+          Prerequisites:
+          -------------
+          1. Unlocked bootloader
+          2. Working recovery (TWRP recommended)
+          3. USB debugging enabled
+          4. Battery above 50%
+
+          Flashing Steps:
+          --------------
+          Via Recovery (Recommended):
+          1. Boot into recovery mode (Power + Vol Up)
+          2. Select "Install"
+          3. Navigate to X7Max-Kernel.zip
+          4. Swipe to flash
+          5. Reboot system
+
+          Via Fastboot (Alternative):
+          1. Boot into fastboot mode (Power + Vol Down)
+          2. Run: fastboot flash boot Image.gz-dtb
+          3. Run: fastboot reboot
+
+          Notes:
+          ------
+          - Make backup before flashing
+          - First boot may take longer
+          - If boot fails, flash stock kernel
+          EOF
+
+          # Create changelog
+          cat << 'EOF' > CHANGELOG.txt
+          Kernel Build Changelog
+          ====================
+          Date: 2025-03-23
+          Time: 18:39:41
+          Builder: dharani-dp-33
+
+          Changes:
+          - Updated OPLUS features
+          - Added scheduler configurations
+          - Security patches implemented
+          - Performance optimizations
+          EOF
+
+          # Create verification script
+          cat << 'EOF' > verify_kernel.sh
+          #!/bin/bash
+          echo "Kernel Verification Script"
+          echo "========================="
+          echo "Checking kernel version..."
+          adb shell cat /proc/version
+          echo "Checking CPU frequency..."
+          adb shell cat /sys/devices/system/cpu/cpu*/cpufreq/scaling_cur_freq
+          echo "Checking temperature..."
+          adb shell cat /sys/class/thermal/thermal_zone*/temp
+          EOF
+          chmod +x verify_kernel.sh
+
+      - name: Package Everything
+        run: |
+          cd flash_package
+          
+          # Copy kernel files
+          cp ../kernel-files/out/arch/arm64/boot/Image.gz-dtb ./
+          cp ../kernel-files/X7Max-Kernel.zip ./
+          
+          # Create final package
+          zip -r ../X7Max-Kernel-Full.zip \
+            * \
+            -x "*.git*" \
+            -x "*placeholder*"
+
+      - name: Generate SHA256 Checksums
+        run: |
+          cd flash_package
+          sha256sum Image.gz-dtb X7Max-Kernel.zip > SHA256SUMS.txt
+          cat SHA256SUMS.txt
+
+      - name: Upload Flash Package
+        uses: actions/upload-artifact@v4
+        with:
+          name: X7Max-Kernel-Flash-Package
           path: |
-            out/arch/arm64/boot/Image*
-            build.log
-            X7Max-Kernel.zip
-            out/.config
-            test-report.txt
-          if-no-files-found: warn
+            X7Max-Kernel-Full.zip
+            flash_package/SHA256SUMS.txt
+          if-no-files-found: error
+
+      - name: Create Release Info
+        run: |
+          cat << EOF > release-info.txt
+          X7Max/GTNeo/GTNeo2T Kernel Release
+          ================================
+          Build Date: 2025-03-23
+          Build Time: 18:39:41
+          Builder: dharani-dp-33
+
+          Package Contents:
+          - Kernel image (Image.gz-dtb)
+          - AnyKernel3 flashable zip
+          - Flashing instructions
+          - Verification script
+          - SHA256 checksums
+          EOF
+
+      - name: Upload Release Info
+        uses: actions/upload-artifact@v4
+        with:
+          name: X7Max-Kernel-Release-Info
+          path: release-info.txt
